--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,16 +6,13 @@
   <title>CoachInn</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild -->
 </head>
 
-<body ng-app="coachInn">
-  <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-  <!-- Add your site or application content here -->
-  <div class="header">
+<body id="angularApp" ng-app="couchInn" ng-strict-di>
+
+
+
+  <div class="header" >
     <div class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -24,13 +21,27 @@
     </div>
   </div>
   <div class="container">
-    <div ng-view=""></div>
-  </div>
-  <div class="footer">
-    <div class="container">
-      <p><span class="glyphicon glyphicon-heart"></span> J.L.S </p>
+    <div ng-view></div>
+    <div class="footer">
+      <div class="container">
+        <p><span class="glyphicon glyphicon-heart"></span> J.L.S </p>
+      </div>
     </div>
-  </div>
+
+
+
+<!--angular sources-->
+<script src="components/angular/angular.min.js"></script>
+<script src="components/angular-route/angular-route.min.js"></script>
+<script src="components/angular-animate/angular-animate.min.js"></script>
+<script src="components/angular-cookies/angular-cookies.min.js"></script>
+<script src="components/angular-resource/angular-resource.min.js"></script>
+<script src="components/angular-sanitize/angular-sanitize.min.js"></script>
+<script src="components/angular-touch/angular-touch.min.js"></script>
+<!--End angular sources-->
+
+<script src="app/couchInn/src/couchInn-config.js"></script>
+<script src="app/couchInn/src/couchInn-controller.js"></script>
 </body>
 
 </html>
