--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,24 +12,26 @@
 
 
 
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
+  <div class="header">
+    <div class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="container">
-  <div ng-view></div>
-</div>
-
-<div class="footer">
-    <div class="container">
-      <p><span class="glyphicon glyphicon-heart"></span> J.L.S </p>
+  <div class="container" ng-controller="couchInnController">
+    <div ng-view>
+      {{model}}
     </div>
-</div>
+  </div>
+
+  <div class="footer">
+      <div class="container">
+        <p><span class="glyphicon glyphicon-heart"></span> J.L.S </p>
+      </div>
+  </div>
 
 <!--angular sources-->
 <script src="components/angular/angular.min.js"></script>
