--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,49 +35,16 @@
      cambia en base a la ruta interna (# en adelante)  -->
     <div ng-view>
 
-      <div layout="column" layout-align="center center">
-        <div flex="none" style="height: 400px">
-          <!-- <video autoplay loop muted>
-            <source src="https://a0.muscache.com/airbnb/static/P1-background-vid-compressed.webm" type="video/webm">
-          </video> -->
-          <h1>UN LUGAR EN EL QUE VIVIR</h1>
-          <h5>Reserva alojamientos de anfitriones locales en más de 191 países
-             y disfruta de la ciudad como un habitante más.
-          </h5>
-          <button>Cómo funciona</button>
-        </div>
+      <main-view>
 
-        <div flex="none">
-          <form>
-            <label>
-              <span>Buscar por ciudad, vecindario o dirección...</span>
-              <input placeholder="Buscar por ciudad, vecindario o dirección..." />
-            </label>
-            <div>Por favor, elige una ubicación</span>
-            </div>
-            <div>
-              <label>
-                <span>Llegada</span>
-                <input type="text" id="startDate" name="startDate" value="" placeholder="Llegada" autocomplete="off" maxlength="10">
-              </label>
-              <div>Llegada</div>
-            </div>
-
-          </form>
-
-        </div>
-
-        <div flex="auto">
-        </div>
-
-      </div>
+      </main-view>
 
     </div>
   </div>
 
   <div layout="column" class="footer">
     <div flex>
-      <p>Footer</p>
+
     </div>
   </div>
 
@@ -94,6 +61,7 @@
   <!--couchInn sources-->
   <script src="app/couchInn/src/couchInn-config.js"></script>
   <script src="app/couchInn/src/couchInn-controller.js"></script>
+  <script src="app/couchInn/src/couchInn-directives.js"></script>
 
 
   <!-- Angular Material Dependencies -->
