agregué una lógica para ruteo interno de módulo couchInn

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:ng="http://angularjs.org" ng-app="couchInn" ng-strict-di>
+<html xmlns:ng="http://angularjs.org" ng-app="couchinn" ng-strict-di>
 
 <head>
   <meta charset="utf-8">
@@ -31,15 +31,8 @@
 
   <div class="container">
 
-    <!-- esta sección de la vista, ng-view ,
-     cambia en base a la ruta interna (# en adelante)  -->
-    <div ng-view>
+    <div ng-view></div>
 
-      <main-view>
-
-      </main-view>
-
-    </div>
   </div>
 
   <div layout="column" class="footer">
