arreglé un poco el index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,67 +1,67 @@
 <!doctype html>
 <html xmlns:ng="http://angularjs.org" ng-app="couchinn" ng-strict-di>
 
-<head>
-  <meta charset="utf-8">
-  <title>CoachInn</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <head>
+    <meta charset="utf-8" />
+    <title>CoachInn</title>
+    <meta name="description" content="" >
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" >
 
 
-  <!-- Angular Material CSS -->
-  <link rel="stylesheet" href="components/angular-material/angular-material.min.css">
+    <!-- Angular Material CSS -->
+    <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.min.css" >
 
-  <!--couchInn sources-->
-  <link rel="stylesheet" href="app/couchInn/src/stylesheets/couchInn.css">
+    <!--couchInn sources-->
+    <link rel="stylesheet" type="text/css" href="app/couchInn/src/stylesheets/couchInn.css" >
 
-</head>
+  </head>
 
-<body>
+  <body>
 
 
 
-  <div class="header">
-    <div class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
+    <div class="header">
+      <div class="navbar navbar-default" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="container">
 
-    <div ng-view></div>
 
-  </div>
+      <div ng-view></div>
 
-  <div layout="column" class="footer">
-    <div flex>
 
+
+    <div layout="column" class="footer">
+      <div flex>
+
+      </div>
     </div>
-  </div>
 
-  <!--angular sources-->
-  <script src="components/angular/angular.min.js"></script>
-  <script src="components/angular-route/angular-route.min.js"></script>
-  <script src="components/angular-animate/angular-animate.min.js"></script>
-  <script src="components/angular-cookies/angular-cookies.min.js"></script>
-  <script src="components/angular-resource/angular-resource.min.js"></script>
-  <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
-  <script src="components/angular-touch/angular-touch.min.js"></script>
-  <!--End angular sources-->
+    <!--angular sources-->
+    <script type="application/javascript" src="components/angular/angular.min.js"></script>
+    <script type="application/javascript" src="components/angular-route/angular-route.min.js"></script>
+    <script type="application/javascript" src="components/angular-animate/angular-animate.min.js"></script>
+    <script type="application/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
+    <script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
+    <script type="application/javascript" src="components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script type="application/javascript" src="components/angular-touch/angular-touch.min.js"></script>
+    <!--End angular sources-->
 
-  <!--couchInn sources-->
-  <script src="app/couchInn/src/couchInn-config.js"></script>
-  <script src="app/couchInn/src/couchInn-controller.js"></script>
-  <script src="app/couchInn/src/couchInn-directives.js"></script>
-
-
-  <!-- Angular Material Dependencies -->
-  <script src="components/angular-aria/angular-aria.min.js"></script>
-  <script src="components/angular-material/angular-material.min.js"></script>
+    <!--couchInn sources-->
+    <script type="application/javascript" src="app/couchInn/src/couchInn-config.js"></script>
+    <script type="application/javascript" src="app/couchInn/src/couchInn-controller.js"></script>
+    <script type="application/javascript" src="app/couchInn/src/couchInn-directives.js"></script>
 
 
-</body>
+    <!-- Angular Material Dependencies -->
+    <script type="application/javascript" src="components/angular-aria/angular-aria.min.js"></script>
+    <script type="application/javascript" src="components/angular-material/angular-material.min.js"></script>
+
+
+  </body>
 
 </html>
