agregué el módulo header

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,27 +19,20 @@
   <body>
 
 
+    <div ng-view>
 
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-          </div>
-        </div>
-      </div>
     </div>
 
 
 
-      <div ng-view></div>
-
-
-
-    <div layout="column" class="footer">
-      <div flex>
-
-      </div>
-    </div>
+ <md-content layout="column" flex>
+   <div flex layout="column">
+     <div ng-if="" style="background-color:SteelBlue;color:white;"></div>
+   </div>
+   <footer flex="none" style="background-color:orange;color:white;">
+     <div>footer item</div>
+   </footer>
+ </md-content>
 
     <!--angular sources-->
     <script type="application/javascript" src="components/angular/angular.min.js"></script>
@@ -57,11 +50,16 @@
     <script type="application/javascript" src="components/angular-material/angular-material.min.js"></script>
 
 
-    <!--couchInn sources-->
-    <script type="application/javascript" src="app/couchInn/src/couchInn-config.js"></script>
-    <script type="application/javascript" src="app/couchInn/src/couchInn-controller.js"></script>
-    <script type="application/javascript" src="app/couchInn/src/couchInn-directives.js"></script>
-
+    <!--modules sources-->
+      <!--main-->
+      <script type="application/javascript" src="app/couchInn/src/couchInn-config.js"></script>
+      <script type="application/javascript" src="app/couchInn/src/couchInn-controller.js"></script>
+      <script type="application/javascript" src="app/couchInn/src/couchInn-directives.js"></script>
+      <!--header-->
+      <script type="application/javascript" src="app/header/src/header-config.js"></script>
+      <script type="application/javascript" src="app/header/src/header-controller.js"></script>
+      <script type="application/javascript" src="app/header/src/header-directives.js"></script>
+    <!--modules sources-->
 
   </body>
 
