--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,6 @@
 
     <!-- Angular Material CSS -->
     <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.min.css" >
-
     <!--couchInn sources-->
     <link rel="stylesheet" type="text/css" href="app/couchInn/src/stylesheets/couchInn.css" >
 
@@ -59,6 +58,9 @@
       <script type="application/javascript" src="app/header/src/header-config.js"></script>
       <script type="application/javascript" src="app/header/src/header-controller.js"></script>
       <script type="application/javascript" src="app/header/src/header-directives.js"></script>
+      <!--register-->
+      <script type="application/javascript" src="app/register/src/register-config.js"></script>
+      <script type="application/javascript" src="app/register/src/register-controller.js"></script>
     <!--modules sources-->
 
   </body>
