--- a/app/views/index.html
+++ b/app/views/index.html
@@ -61,6 +61,9 @@
       <!--register-->
       <script type="application/javascript" src="app/register/src/register-config.js"></script>
       <script type="application/javascript" src="app/register/src/register-controller.js"></script>
+      <!--login-->
+      <script type="application/javascript" src="app/login/src/login-config.js"></script>
+      <script type="application/javascript" src="app/login/src/login-controller.js"></script>
     <!--modules sources-->
 
   </body>
