--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,6 +41,7 @@
     <script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
     <script type="application/javascript" src="components/angular-sanitize/angular-sanitize.min.js"></script>
     <script type="application/javascript" src="components/angular-touch/angular-touch.min.js"></script>
+    <script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
     <!--End angular sources-->
 
 
@@ -54,6 +55,7 @@
       <script type="application/javascript" src="app/couchInn/src/couchInn-config.js"></script>
       <script type="application/javascript" src="app/couchInn/src/couchInn-controller.js"></script>
       <script type="application/javascript" src="app/couchInn/src/couchInn-directives.js"></script>
+      <script type="application/javascript" src="app/couchInn/src/couchInn-services.js"></script>
       <!--header-->
       <script type="application/javascript" src="app/header/src/header-config.js"></script>
       <script type="application/javascript" src="app/header/src/header-controller.js"></script>
