agregue todo lo que hice de hospedaje

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,87 +19,55 @@
 <body>
 
 
+<div ng-view>
 
-  <div class="header">
-    <div class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-        </div>
-      </div>
-    </div>
+</div>
+
+
+
+<md-content layout="column" flex>
+  <div flex layout="column">
+    <div ng-if="" style="background-color:SteelBlue;color:white;"></div>
   </div>
+  <footer flex="none" style="background-color:orange;color:white;">
+    <div>footer item</div>
+  </footer>
+</md-content>
 
-  <div class="container">
-
-    <!-- esta sección de la vista, ng-view ,
-     cambia en base a la ruta interna (# en adelante)  -->
-    <div ng-view>
-
-      <div layout="column" layout-align="center center">
-        <div flex="none" style="height: 400px">
-          <!-- <video autoplay loop muted>
-            <source src="https://a0.muscache.com/airbnb/static/P1-background-vid-compressed.webm" type="video/webm">
-          </video> -->
-          <h1>UN LUGAR EN EL QUE VIVIR</h1>
-          <h5>Reserva alojamientos de anfitriones locales en más de 191 países
-             y disfruta de la ciudad como un habitante más.
-          </h5>
-          <button>Cómo funciona</button>
-        </div>
-
-        <div flex="none">
-          <form>
-            <label>
-              <span>Buscar por ciudad, vecindario o dirección...</span>
-              <input placeholder="Buscar por ciudad, vecindario o dirección..." />
-            </label>
-            <div>Por favor, elige una ubicación</span>
-            </div>
-            <div>
-              <label>
-                <span>Llegada</span>
-                <input type="text" id="startDate" name="startDate" value="" placeholder="Llegada" autocomplete="off" maxlength="10">
-              </label>
-              <div>Llegada</div>
-            </div>
-
-          </form>
-
-        </div>
-
-        <div flex="auto">
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-
-  <div layout="column" class="footer">
-    <div flex>
-      <p>Footer</p>
-    </div>
-  </div>
-
-  <!--angular sources-->
-  <script src="components/angular/angular.min.js"></script>
-  <script src="components/angular-route/angular-route.min.js"></script>
-  <script src="components/angular-animate/angular-animate.min.js"></script>
-  <script src="components/angular-cookies/angular-cookies.min.js"></script>
-  <script src="components/angular-resource/angular-resource.min.js"></script>
-  <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
-  <script src="components/angular-touch/angular-touch.min.js"></script>
-  <!--End angular sources-->
-
-  <!--couchInn sources-->
-  <script src="app/couchInn/src/couchInn-config.js"></script>
-  <script src="app/couchInn/src/couchInn-controller.js"></script>
+<!--angular sources-->
+<script type="application/javascript" src="components/angular/angular.min.js"></script>
+<script type="application/javascript" src="components/angular-route/angular-route.min.js"></script>
+<script type="application/javascript" src="components/angular-animate/angular-animate.min.js"></script>
+<script type="application/javascript" src="components/angular-cookies/angular-cookies.min.js"></script>
+<script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
+<script type="application/javascript" src="components/angular-sanitize/angular-sanitize.min.js"></script>
+<script type="application/javascript" src="components/angular-touch/angular-touch.min.js"></script>
+<script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
+<!--End angular sources-->
 
 
-  <!-- Angular Material Dependencies -->
-  <script src="components/angular-aria/angular-aria.min.js"></script>
-  <script src="components/angular-material/angular-material.min.js"></script>
+<!-- Angular Material Dependencies -->
+<script type="application/javascript" src="components/angular-aria/angular-aria.min.js"></script>
+<script type="application/javascript" src="components/angular-material/angular-material.min.js"></script>
 
+
+<!--modules sources-->
+<!--main-->
+<script type="application/javascript" src="app/couchInn/src/couchInn-config.js"></script>
+<script type="application/javascript" src="app/couchInn/src/couchInn-controller.js"></script>
+<script type="application/javascript" src="app/couchInn/src/couchInn-directives.js"></script>
+<script type="application/javascript" src="app/couchInn/src/couchInn-services.js"></script>
+<!--header-->
+<script type="application/javascript" src="app/header/src/header-config.js"></script>
+<script type="application/javascript" src="app/header/src/header-controller.js"></script>
+<script type="application/javascript" src="app/header/src/header-directives.js"></script>
+<!--register-->
+<script type="application/javascript" src="app/register/src/register-config.js"></script>
+<script type="application/javascript" src="app/register/src/register-controller.js"></script>
+<!--login-->
+<script type="application/javascript" src="app/login/src/login-config.js"></script>
+<script type="application/javascript" src="app/login/src/login-controller.js"></script>
+<!--modules sources-->
 
 </body>
 
