--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,6 +43,7 @@
     <script type="application/javascript" src="components/angular-sanitize/angular-sanitize.min.js"></script>
     <script type="application/javascript" src="components/angular-touch/angular-touch.min.js"></script>
     <script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
+    <script type="application/javascript" src="components/angular-jwt/dist/angular-jwt.js"></script>
     <!--End angular sources-->
 
 
