--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,14 +25,17 @@
 
 
 
- <md-content layout="column" flex>
-   <div flex layout="column">
-     <div ng-if="" style="background-color:SteelBlue;color:white;"></div>
-   </div>
-   <footer flex="none" style="background-color:orange;color:white;">
-     <div>footer item</div>
-   </footer>
- </md-content>
+    <md-content layout="column" flex>
+      <div flex layout="column">
+        <div ng-if="" style="background-color:SteelBlue;color:white;"></div>
+      </div>
+      <footer flex="none" style="background-color:orange;color:white;">
+        <div> Para mas informacion contactenos a
+          <a href="mailto:couchinn@gmail.com"> couchinn@gmail.com</a><br>
+          <small>Copyright © 2016 Couchinn </small>
+        </div>
+      </footer>
+    </md-content>
 
     <!--angular sources-->
     <script type="application/javascript" src="components/angular/angular.min.js"></script>
