add middleware for authenticate and administrate role permitions

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -54,6 +54,9 @@
     <script type="application/javascript" src="components/angular-aria/angular-aria.min.js"></script>
     <script type="application/javascript" src="components/angular-material/angular-material.min.js"></script>
 
+    <!-- Helper libs -->
+    <script type="text/javascript" src="components/angular-jwt/dist/angular-jwt.js"></script>
+
 
     <!--modules sources-->
       <!--main-->
