<modififcar tipo, eliminar tipo, detallar publicacion y modificar publicacion>

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -78,6 +78,8 @@
       <!--tipoHospedaje-->
       <script type="application/javascript" src="app/tipoHospedaje/src/tipoHospedaje-config.js"></script>
       <script type="application/javascript" src="app/tipoHospedaje/src/tipoHospedaje-controller.js"></script>
+      <script type="application/javascript" src="app/tipoHospedaje/src/editTipo-controller.js"></script>
+
       <!--logged user-->
       <script type="application/javascript" src="app/loggedUser/src/loggedUser-config.js"></script>
       <script type="application/javascript" src="app/loggedUser/src/loggedUser-controller.js"></script>
@@ -93,7 +95,7 @@
       <!--lodgin-->
       <script type="application/javascript" src="app/lodgin/src/lodgin-config.js"></script>
       <script type="application/javascript" src="app/lodgin/src/lodgin-controller.js"></script>
-
+      <script type="application/javascript" src="app/lodgin/src/editLodgin-controller.js"></script>
       <!--donation-->
       <script type="application/javascript" src="app/donation/src/donation-config.js"></script>
       <script type="application/javascript" src="app/donation/src/donation-controller.js"></script>
