--- a/app/views/index.html
+++ b/app/views/index.html
@@ -96,6 +96,8 @@
       <script type="application/javascript" src="app/lodgin/src/lodgin-config.js"></script>
       <script type="application/javascript" src="app/lodgin/src/lodgin-controller.js"></script>
       <script type="application/javascript" src="app/lodgin/src/editLodgin-controller.js"></script>
+      <script type="application/javascript" src="app/lodgin/src/detailLodgin-controller.js"></script>
+
       <!--donation-->
       <script type="application/javascript" src="app/donation/src/donation-config.js"></script>
       <script type="application/javascript" src="app/donation/src/donation-controller.js"></script>
