install moment and moment-range

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,8 @@
 
     <!-- Helper libs -->
     <script type="text/javascript" src="components/angular-jwt/dist/angular-jwt.js"></script>
+    <script type="text/javascript" src="components/moment/moment.js"></script>
+    <script type="text/javascript" src="components/moment-range/dist/moment-range.js"></script>
 
 
     <!--modules sources-->
