--- a/app/views/index.html
+++ b/app/views/index.html
@@ -78,8 +78,8 @@
       <!--tipoHospedaje-->
       <script type="application/javascript" src="app/tipoHospedaje/src/tipoHospedaje-config.js"></script>
       <script type="application/javascript" src="app/tipoHospedaje/src/tipoHospedaje-controller.js"></script>
-  <!--    <script type="application/javascript" src="app/tipoHospedaje/src/editTipo-controller.js"></script>
--->
+      <script type="application/javascript" src="app/tipoHospedaje/src/editTipo-controller.js"></script>
+
       <!--logged user-->
       <script type="application/javascript" src="app/loggedUser/src/loggedUser-config.js"></script>
       <script type="application/javascript" src="app/loggedUser/src/loggedUser-controller.js"></script>
