agregue el modulo mis solicitudes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -94,6 +94,10 @@
       <script type="application/javascript" src="app/donation/src/donation-config.js"></script>
       <script type="application/javascript" src="app/donation/src/donation-controller.js"></script>
 
+      <!--mis solicitudes-->
+      <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-config.js"></script>
+      <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-controller.js"></script>
+
     <!--modules sources-->
 
   </body>
