terminé mis-solicitudes-

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,8 @@
 
     <!--couchInn sources-->
     <link rel="stylesheet" type="text/css" href="app/couchInn/src/stylesheets/couchInn.css" >
+    <link rel="stylesheet" type="text/css" href="app/mis-solicitudes/src/stylesheets/misSolicitudes.css" >
+
 
   </head>
 
