--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,8 @@
 
     <!--couchInn sources-->
     <link rel="stylesheet" type="text/css" href="app/couchInn/src/stylesheets/couchInn.css" >
+    <link rel="stylesheet" type="text/css" href="app/mis-solicitudes/src/stylesheets/misSolicitudes.css" >
+
 
   </head>
 
@@ -93,6 +95,10 @@
       <!--donation-->
       <script type="application/javascript" src="app/donation/src/donation-config.js"></script>
       <script type="application/javascript" src="app/donation/src/donation-controller.js"></script>
+
+      <!--mis solicitudes-->
+      <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-config.js"></script>
+      <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-controller.js"></script>
 
     <!--modules sources-->
 
