--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,6 +10,7 @@
 
     <!-- Angular Material CSS -->
     <link rel="stylesheet" type="text/css" href="components/angular-material/angular-material.min.css" >
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0-rc.5/angular-material.css">-->
 
     <!--couchInn sources-->
     <link rel="stylesheet" type="text/css" href="app/couchInn/src/stylesheets/couchInn.css" >
@@ -39,11 +40,13 @@
     <script type="application/javascript" src="components/angular-touch/angular-touch.min.js"></script>
     <script type="application/javascript" src="components/angular-resource/angular-resource.min.js"></script>
     <script type="application/javascript" src="components/a0-angular-storage/dist/angular-storage.js"></script>
+    <script type="application/javascript" src="components/angular-messages/angular-messages.js"></script>
     <!--End angular sources-->
 
 
     <!-- Angular Material Dependencies -->
     <script type="application/javascript" src="components/angular-aria/angular-aria.min.js"></script>
+    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0-rc.5/angular-material.js"></script>-->
     <script type="application/javascript" src="components/angular-material/angular-material.min.js"></script>
 
     <!-- Helper libs -->
