arregle el menu y los items los puse en un sevicio

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -65,6 +65,7 @@
       <script type="application/javascript" src="app/header/src/header-config.js"></script>
       <script type="application/javascript" src="app/header/src/header-controller.js"></script>
       <script type="application/javascript" src="app/header/src/header-directives.js"></script>
+      <script type="application/javascript" src="app/header/src/header-services.js"></script>
       <!--register-->
       <script type="application/javascript" src="app/register/src/register-config.js"></script>
       <script type="application/javascript" src="app/register/src/register-controller.js"></script>
