--- a/app/views/index.html
+++ b/app/views/index.html
@@ -100,6 +100,7 @@
       <!--donation-->
       <script type="application/javascript" src="app/donation/src/donation-config.js"></script>
       <script type="application/javascript" src="app/donation/src/donation-controller.js"></script>
+      <script type="application/javascript" src="app/donation/src/ganancias-controller.js"></script>
 
       <!--mis solicitudes-->
       <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-config.js"></script>
