--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" type="text/css" href="app/mis-solicitudes/src/stylesheets/misSolicitudes.css" >
 
 
+    <link href="components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
+
+
   </head>
 
   <body>
@@ -53,6 +56,7 @@
     <script type="text/javascript" src="components/angular-jwt/dist/angular-jwt.js"></script>
     <script type="text/javascript" src="components/moment/moment.js"></script>
     <script type="text/javascript" src="components/moment-range/dist/moment-range.js"></script>
+    <script type="text/javascript" src="components/angular-material-data-table/dist/md-data-table.min.js"></script>
 
 
     <!--modules sources-->
