--- a/app/views/index.html
+++ b/app/views/index.html
@@ -110,6 +110,13 @@
       <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-config.js"></script>
       <script type="application/javascript" src="app/mis-solicitudes/src/misSolicitudes-controller.js"></script>
       <script type="application/javascript" src="app/mis-solicitudes/src/editSolicitud-controller.js"></script>
+
+
+    <!--mis solicitudes-->
+    <script type="application/javascript" src="app/solicitudes/src/solicitudes-config.js"></script>
+    <script type="application/javascript" src="app/solicitudes/src/solicitudes-controller.js"></script>
+
+
     <!--modules sources-->
 
   </body>
